--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -176,6 +176,7 @@ collections:
         name: "content"
         file: "src/content/home-about-page.json"
         fields:
+          - {label: "Show home about section", name: "show_home_about", widget: "boolean", default: true}
           - {label: "Home about image", name: "home_about_image", widget: "image"}
           - {label: "Home about image description", name: "home_about_image_description", widget: "string", required: false}
           - label: "Header title lines"
