feat: added image description field

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -120,6 +120,7 @@ collections:
               - {label: "Paragraph", name: "paragraph", widget: "text"}
 
           - {label: "Image under paragraphs", name: "image_under_paragraphs", widget: "image"}
+          - {label: "Image under paragraphs description", name: "image_under_paragraphs_description", widget: "string", required: false}
           - {label: "My equipment title", name: "my_equipment_title", widget: string, required: false} 
           - label: "Equipment"
             name: "equipment"
